fix background image position on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,7 +161,7 @@ a:hover {
 
 .date-input input {
   width: 100%;
-  background: #ffffff00;
+  background: rgba(0, 0, 0, 0) !important;
   text-align: center;
   height: 15px;
   margin: 0;
@@ -317,7 +317,7 @@ div#city {
 
   header,
   .hero {
-    background-position: 55%;
+    background-position: 52% -100px;
   }
 
   nav {
@@ -335,5 +335,14 @@ div#city {
   .hero-statement h2 {
     font-size: 55px;
     margin: 30px 0;
+  }
+
+  .rd-container.rd-container-attachment {
+    left: 0px !important;
+    top: 260px !important;
+  }
+
+  nav {
+    justify-content: center;
   }
 }
